# vchan

./: .gitignore
vchan-actix/: Cargo.toml
vchan-actix/.cargo/: config.toml
vchan-actix/config/: config.default.toml
vchan-actix/src/: consts.rs  main.rs
vchan-actix/src/factories/: mod.rs
vchan-actix/src/init/: mod.rs
vchan-actix/src/init/config/: mod.rs
vchan-actix/src/models/: cookie_token.rs  mod.rs
vchan-actix/src/services/: mod.rs
vchan-actix/src/services/board/: mod.rs
vchan-actix/src/services/post/: mod.rs
vchan-actix/src/services/thread/: mod.rs
vchan-actix/src/services/user/: mod.rs
vchan-actix/src/utils/: mod.rs
vchan-actix/ssl/: cert.pem  key.pem
vchan-pg/: .gitignore  Cargo.toml
vchan-pg/migrations/2023-02-10-131330_startup/: down.sql  up.sql
vchan-pg/src/: lib.rs  main.rs  schema.rs
vchan-pg/src/model/: board.rs  ip_record.rs  mod.rs  permission_group.rs  post.rs  thread.rs  user.rs
vchan-pg/src/query/: batch.rs  board.rs  mod.rs  post_page.rs  thread_page.rs
vchan-pg/src/transaction/: create_board.rs  create_user.rs  find_user.rs  get_user_auth.rs  mod.rs  user_post_thread.rs  user_reply_thread.rs
vchan-pg/src/utils/: mod.rs
vchan-web/: package.json
vchan-web/vchan-react/: package-lock.json  package.json  stitches.config.ts  tsconfig.json
vchan-web/vchan-react/src/: App.css  App.tsx  index.css  main.tsx
vchan-web/vchan-react/src/components/: PageContainer.tsx  PostForm.ts  Thread.tsx  UserId.tsx  VchanDialog.tsx  VcrButton.tsx  VcrPost.tsx  VrcSwitch.tsx  index.ts
vchan-web/vchan-react/src/hooks/: index.ts
(+16 files in other folders)
