[package]
name = "vchan-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
derive_builder = "0.12.0"
diesel = { version = "2.0.3", features = [
    "r2d2",
    "chrono",
    "network-address",
    "postgres",
    "postgres_backend",
] }
hex = "0.4.3"
ipnetwork = "0.20.0"
juniper = "0.15.11"
paste = "1.0.11"
r2d2 = "0.8.10"

rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["chrono"] }
sha2 = "0.10.6"
